--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     </div>
                     <img src="team7.jpg" alt="">
                     <div class="doc-details">
-                        <h2>Mr Sachin</h2>
+                        <h2>Mr Rahul</h2>
                         
                         <i class="fa-brands fa-linkedin"></i>
                         <i class="fa-brands fa-instagram"></i>
@@ -427,4 +427,5 @@
 </body>
 
 </html>
+
 
